fix: solves problem of cards overlaping other cards when hover

--- a/src/client/src/App.scss
+++ b/src/client/src/App.scss
@@ -241,7 +241,7 @@ a {
 	background-color: $components-bg-color;
 	width: 80%;
 	max-width: 300px;
-	margin: 0 auto 25px;
+	margin: 0 auto 50px;
 	border-radius: 15px;
 	box-shadow: 0 0 30px rgba(0, 0, 0, 0.18);
 	&__img {
